updated the text

--- a/asciidocs/index.adoc
+++ b/asciidocs/index.adoc
@@ -94,21 +94,21 @@ PL/SQL
 [source,java]
 ----
 public class FirstJdbcDemo {
-public static void main(String[] args) {
-try ( Connection conn = DriverManager.getConnection
-    "jdbc:derby://localhost:1527/db;create=true", "app", "pass") ) {
-    String sql = "select * from demo";
-    Statement stmt = conn.createStatement();
-    ResultSet rs = stmt.executeQuery(sql);
-while (rs.next()) {
-    System.out.printf("%5d: %-20s\n",
-    rs.getInt(1),
-    rs.getString("name"));
-}
-    rs.close();
-    stmt.close();
-} catch (SQLException sqle) {
-    sqle.printStackTrace();
+    public static void main(String[] args) {
+    try ( Connection conn = DriverManager.getConnection
+        "jdbc:derby://localhost:1527/db;create=true", "app", "pass") ) {
+        String sql = "select * from demo";
+        Statement stmt = conn.createStatement();
+        ResultSet rs = stmt.executeQuery(sql);
+    while (rs.next()) {
+        System.out.printf("%5d: %-20s\n",
+        rs.getInt(1),
+        rs.getString("name"));
+    }
+        rs.close();
+        stmt.close();
+    } catch (SQLException sqle) {
+        sqle.printStackTrace();
         }
     }
 }
@@ -157,3 +157,10 @@ Liefert die Anzahl an betroffenen Datensätzen zurück.
 Wird verwendet bei INSERT, DELETE oder UPDATE-Statements.
 
 == Scenebuilder
+
+FXML-file mit Controller verbinden
+[source, java]
+----
+<root-el fx:controller="com.example.personenerfassung1.Controller">
+----
+
